--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.46-1~5) UNRELEASED; urgency=medium
+ledgersmb (1.3.46-1~6) UNRELEASED; urgency=medium
 
   * New upstream release. (Closes: #771822)
     - Fixes 'Duplicate message' errors in locale/po/hu.po. (Closes: #752063)
@@ -8,7 +8,7 @@ ledgersmb (1.3.46-1~5) UNRELEASED; urgency=medium
     - Add a note regarding the texlive-xetex package.
   * Correct a copyright email address in the debian/copyright file.
   * Set permissions on ledgersmb/bin/gl.pl correctly in debian/rules.
-  * Update how dpkg-maintscript-helper is invoked in maintainer scripts.
+  * Update how the Apache related processing is done in the maintainer scripts.
   * The contrib_dir setting in 05_confdir.patch is only needed for Pg v9.1.
   * Remove the use of drop_statoverride function from the maintainer scripts.
   * Changes in debian/control:
@@ -21,7 +21,7 @@ ledgersmb (1.3.46-1~5) UNRELEASED; urgency=medium
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 28 Jan 2015 04:16:33 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 28 Jan 2015 05:33:16 -0500
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
