--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,17 @@
-ledgersmb (1.3.46-1) unstable; urgency=medium
+ledgersmb (1.3.46-1~8) UNRELEASED; urgency=medium
 
   * New upstream release. (Closes: #771822)
     - Fixes 'Duplicate message' errors in locale/po/hu.po. (Closes: #752063)
   * Add new Dutch debconf translation. (Closes: #767242)
   * Changes to debian/README.Debian:
-    - Minor updates and corrections to the wording.
     - Add a note regarding the texlive-xetex package.
+    - Update note regarding the contrib_dir directive.
+    - Add a note about the usage of the template files.
   * Correct a copyright email address in the debian/copyright file.
   * Set permissions on ledgersmb/bin/gl.pl correctly in debian/rules.
   * Update how the Apache related processing is done in the maintainer scripts.
-  * The contrib_dir setting in 05_confdir.patch is only needed for Pg v9.1.
+  * Set default for contrib_dir in 05_confdir.patch to be for PostgreSQL v9.4
+    instead of PostgreSQL v9.1.
   * Remove the use of drop_statoverride function from the maintainer scripts.
   * Changes in debian/control:
     - Add texlive-xetex package as a suggested package.
@@ -21,7 +23,7 @@ ledgersmb (1.3.46-1) unstable; urgency=medium
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 29 Jan 2015 03:31:34 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun, 12 Apr 2015 13:09:31 -0400
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
