--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.46-1~13) UNRELEASED; urgency=medium
+ledgersmb (1.3.46-1) unstable; urgency=medium
 
   * New upstream release. (Closes: #771822)
     - Fixes 'Duplicate message' errors in locale/po/hu.po. (Closes: #752063)
@@ -9,7 +9,7 @@ ledgersmb (1.3.46-1~13) UNRELEASED; urgency=medium
     - Add a note about the usage of the template files.
   * Correct a copyright email address in the debian/copyright file.
   * Set permissions on ledgersmb/bin/gl.pl correctly in debian/rules.
-  * Change how the LedgerSMB Database adminitrative user relate processing is
+  * Change how the LedgerSMB Database administrative user related processing is
     being done, including dropping the use of dbconfig-common for the database
     related processing. (Closes: #698298, #758140, LP#1078817)
   * Update how the Apache related processing is done in the maintainer scripts.
@@ -26,7 +26,7 @@ ledgersmb (1.3.46-1~13) UNRELEASED; urgency=medium
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 28 Apr 2015 12:04:51 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 29 Apr 2015 01:36:52 -0400
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
