--- a/ledger-smb/trunk/debian/TODO
+++ b/ledger-smb/trunk/debian/TODO
@@ -1,24 +1,11 @@
 debian/TODO for LedgerSMB v1.3
 
-
-====================================================================================================
-
------------------------------------------------------------------------------------
-
-- An Ubuntu bug was submitted about setup.pl not working after selecting
-an automatic config during the install and setting a password:
-https://bugs.launchpad.net/bugs/1078817
-- Created a Debian bug for the same issue, # 698298, & pointed the ubuntu bug
-to that. Assigned the ubuntu bug to the Ubuntu LSMB team.
-- The dbconfig-common based database configuration that is being used during
-installations and upgrades needs to be reviewed and improved. It is capable
-of creating the 'ledgersmb' database administrative user but it is not getting
-created with the necessary permissions. It is also apparently automatically
-creating a database named ledgersmb with the current way that user is being
-created, which is not really needed for the application.
-- Investigate dropping the use of dbcommon-config altogether. Debconf already
-gets the necessary admin user and password; only need that in perhaps one
-liners that creates the user as neccessary and sets the password.
+- If an 'apache2_invoke enmod' for the rewrite module is added to the
+postinst section for apache 2.4; the restart of apache done for that
+just hangs.  An apache reload done for 'apache2_invoke enconf' of the
+2.4 apache configuration for ledgersmb.conf does seem to complete,
+though shouldn't just do one or the other, with the restart overriding
+the reload?
 
 - A debian/po debconf Japanese translation has been provided. Currently,
 there is no LSMB locale/po/ja.po file. Checked System|Lanaguage|List
@@ -35,7 +22,7 @@ create an HTML version?
 then register it with doc-base?
 
 - Now that versions of v1.4 are available; create a new package ledgersmb-1.3,
-for any needed support for v1.3.x versions of LedgerSMB.
+for any needed further support for v1.3.x versions of LedgerSMB.
 
 - Instead of a sym link to point to the /etc/ledgersmb config file(s),
 patch config file to add '/etc/' to the config file setting. (Would
@@ -43,4 +30,4 @@ the apache config need to be updated to allow that?)
 
 
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 11 Dec 2014 02:33 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 29 Apr 2015 01:00 -0400
