--- a/ledger-smb/tags/1.3.46-1/debian/NEWS
+++ b/ledger-smb/tags/1.3.46-1/debian/NEWS
@@ -1,16 +1,15 @@
 ledgersmb (1.3.46-1) unstable; urgency=medium
 
-  Language specific HTML, LaTeX, and Text templates can be edited online but
-  the language specific directory (like /var/ledgersmb/templates/demo/en_US)
-  first needs to be manually created and the template file copied there.
+  The default for the experimental dbconfig/debconf for configuring LedgerSMB
+  during the package installation is to not use it; instead, the LedgerSMB
+  database super-user can be manually created and that can then be used on the
+  setup page at http://localhost/ledgersmb/setup.pl to create the company
+  databases for use. See README.Debian for further information.
 
-  An experimental dbconfig/debconf for configuring LedgerSMB during the package
-  installation is available. Because it is experimental, the default is to not
-  use it; instead what can be done is to manually create the ledgersmb database
-  user and use that on the http://localhost/ledgersmb/setup.pl page to create
-  the company databases for use. More information regarding this is available
-  in /usr/share/doc/ledgersmb/README.Debian.
+  The default for the contrib_dir directive in /etc/ledgersmb/ledgersmb.conf is
+  now for PostgreSQL v9.4. The setting will need to be verified to be correct
+  for the actual installed version of PostgreSQL before using LedgerSMB.
 
 
- -- Robert James Clay <jame@rocasa.us>  Wed,  5 Nov 2014 07:19:55 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 12 Apr 2015 12:52:15 -0400
 
