--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.46-1~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 26 May 2015 09:36:37 -0400
+
 ledgersmb (1.3.46-1) unstable; urgency=medium
 
   * New upstream release. (Closes: #771822)
