--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ledgersmb (1.4.14+ds-1~2) UNRELEASED; urgency=medium
+ledgersmb (1.4.14+ds-1~3) UNRELEASED; urgency=medium
 
   * New upstream release.
     - Inital package update for v1.4.x versions. (Closes: #773363)
   * Add debian/upstream/signing-key.asc for upstream gpg release signing key.
+  * Explicitly do db_stop when done with debconf in debian/ledgersmb.postinst.
   * Add pgpsigurlmangle, dversionmangle, & repacksuffix options to debian/watch.
   * Change where ledgersmb.conf is enabled for apache 2.4 in ledgersmb.postinst.
   * Changes in debian/control:
@@ -16,7 +17,7 @@ ledgersmb (1.4.14+ds-1~2) UNRELEASED; urgency=medium
     - Add 'Files-Excluded' section for embedded 'dojo' javascripts libraries.
     - Remove references to libjs-prototype & libjs-scriptaculous.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 27 Aug 2015 12:37:18 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 27 Aug 2015 14:58:37 -0400
 
 ledgersmb (1.3.46-1) unstable; urgency=medium
 
