--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-ledgersmb (1.4.14+ds-1~3) UNRELEASED; urgency=medium
+ledgersmb (1.4.15+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
-    - Inital package update for v1.4.x versions. (Closes: #773363)
+    - Initial package update for v1.4.x versions. (Closes: #773363)
   * Add debian/upstream/signing-key.asc for upstream gpg release signing key.
   * Explicitly do db_stop when done with debconf in debian/ledgersmb.postinst.
   * Add pgpsigurlmangle, dversionmangle, & repacksuffix options to debian/watch.
@@ -14,10 +14,12 @@ ledgersmb (1.4.14+ds-1~3) UNRELEASED; urgency=medium
       libcarp-always-perl.
     - Drop dh-linktree,libjs-prototype,libjs-scriptaculous from Build-Depends.
   * Changes in debian/copyright:
+    - Update copyright years for the '*' Files stanza
+    - Add Nick Prater copyright information to debian/copyright.
+    - Remove references related to libjs-prototype & libjs-scriptaculous.
     - Add 'Files-Excluded' section for embedded 'dojo' javascripts libraries.
-    - Remove references to libjs-prototype & libjs-scriptaculous.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 27 Aug 2015 14:58:37 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 31 Aug 2015 12:42:15 -0400
 
 ledgersmb (1.3.46-1) unstable; urgency=medium
 
