--- a/debian/TODO
+++ b/debian/TODO
@@ -8,39 +8,19 @@ Update debian/Readme.sources
 
 review locale/po/* files for updating debian/copyright as necessary
 
-- need to add a get-orig-source target added to debian rules ?
+- Add a get-orig-source target added to debian rules ?
 
 ----------------------------------------------------
-	- some apache config (mpm?)  use cgid instead of cgi;  change postinst to 
-	to the test for which is already enabled depending on if mpm is enabled?
+- some apache configs (mpm?)  use cgid instead of cgi;  change postinst to 
+  do the test for which is already enabled depending on if mpm is enabled?
 
 ----------------------------------------------------
 
 Now running lintian...
 
-	- these seem to be missing the short description and the 'dash' sign after the "NAME" entry.
-
+    - These seem to be missing the short description and the 'dash' sign after the "NAME" entry
+    in source Perl file.
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::App_State.3pm.gz
-N: 
-N:    Each manual page should start with a "NAME" section, which lists the
-N:    name and a brief description of the page separated by "\-". The "NAME"
-N:    section is parsed by lexgrog and used to generate a database that's
-N:    queried by commands like apropos and whatis. This tag indicates that
-N:    lexgrog was unable to parse the NAME section of this manual page.
-N:    
-N:    For manual pages that document multiple programs, functions, files, or
-N:    other things, the part before "\-" should list each separated by a comma
-N:    and a space. Each thing listed must not contain spaces; a man page for a
-N:    two-part command like "fs listacl" must use something like "fs_listacl"
-N:    in the "NAME" section so that it can be parsed by lexgrog.
-N:    
-N:    Refer to the lexgrog(1) manual page, the groff_man(7) manual page, and
-N:    the groff_mdoc(7) manual page for details.
-N:    
-N:    Severity: normal, Certainty: certain
-N:    
-N:    Check: manpages, Type: binary
-N: 
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::Budget.3pm.gz
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::Business_Unit_Class.3pm.gz
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::DBObject::Journal_Entry.3pm.gz
@@ -61,69 +41,46 @@ W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::Scripts
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::Scripts::user.3pm.gz
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::Scripts::vouchers.3pm.gz
 W: ledgersmb: manpage-has-bad-whatis-entry usr/share/man/man3/LedgerSMB::Session.3pm.gz
-
-W: ledgersmb: script-not-executable usr/share/ledgersmb/tools/app.psgi
 N: 
-N:    This file starts with the #! sequence that marks interpreted scripts,
-N:    but it is not executable.
+N:    Each manual page should start with a "NAME" section, which lists the
+N:    name and a brief description of the page separated by "\-". The "NAME"
+N:    section is parsed by lexgrog and used to generate a database that's
+N:    queried by commands like apropos and whatis. This tag indicates that
+N:    lexgrog was unable to parse the NAME section of this manual page.
+N:    
+N:    For manual pages that document multiple programs, functions, files, or
+N:    other things, the part before "\-" should list each separated by a comma
+N:    and a space. Each thing listed must not contain spaces; a man page for a
+N:    two-part command like "fs listacl" must use something like "fs_listacl"
+N:    in the "NAME" section so that it can be parsed by lexgrog.
+N:    
+N:    Refer to the lexgrog(1) manual page, the groff_man(7) manual page, and
+N:    the groff_mdoc(7) manual page for details.
 N:    
 N:    Severity: normal, Certainty: certain
 N:    
-N:    Check: scripts, Type: binary
-N: 
-W: ledgersmb: script-not-executable usr/share/ledgersmb/tools/fcgi.psgi
-W: ledgersmb: script-not-executable usr/share/ledgersmb/tools/ledgersmb.psgi
+N:    Check: manpages, Type: binary
 
-E: ledgersmb: wrong-path-for-interpreter usr/share/ledgersmb/tools/regen_db_docs.sh (#!/usr/bin/bash != /bin/bash)
-N: 
-N:    The interpreter you used is installed at another location on Debian
-N:    systems.
-N:    
-N:    Severity: important, Certainty: certain
-N:    
-N:    Check: scripts, Type: binary
-N: 
+-----------------------------------------------------------------------------------
+- debian/watch: expand the uversionmangle regular expression to exclude the v1.2
+and v1.3 versions.
 
-E: ledgersmb: wrong-path-for-interpreter usr/share/ledgersmb/tools/regen_db_docs.sh (#!/usr/bin/bash != /bin/bash)
-N: 
-N:    The interpreter you used is installed at another location on Debian
-N:    systems.
-N:    
-N:    Severity: important, Certainty: certain
-N:    
-N:    Check: scripts, Type: binary
-N: 
+-----------------------------------------------------------------------------------
+- Instead of (or along with?) having the package install symlinks for accessing the
+dojo libraries, use Aliases in the Apache config, something like this?
 
+    Alias /ledgersmb/UI/lib/dojo/dojo /usr/share/javascript/dojo
+    Alias /ledgersmb/UI/lib/dojo/dojox /usr/share/javascript/dojox
+    Alias /ledgersmb/UI/lib/dojo/dijit /usr/share/javascript/dijir
 
-W: ledgersmb: executable-not-elf-or-script usr/share/ledgersmb/lsmb-request.pl
-N: 
-N:    This executable file is not an ELF format binary, and does not start
-N:    with the #! sequence that marks interpreted scripts. It might be a sh
-N:    script that fails to name /bin/sh as its shell, or it may be incorrectly
-N:    marked as executable. Sometimes upstream files developed on Windows are
-N:    marked unnecessarily as executable on other systems.
-N:    
-N:    If you are using debhelper to build your package, running dh_fixperms
-N:    will often correct this problem for you.
-N:    
-N:    Refer to Debian Policy Manual section 10.4 (Scripts) for details.
-N:    
-N:    Severity: normal, Certainty: certain
-N:    
-N:    Check: scripts, Type: binary
-N: 
-
+It would only be useful for those installs using Apache, but that is currently
+the default.
 
 -----------------------------------------------------------------------------------
 
--	https://bugs.launchpad.net/ubuntu/+source/ledgersmb/+bug/1473318
-- reported against v15.04 (vivid)		
-- TMK; already resolved with LSMB 1.3.46-1, available in in what will be v15.10 (wily)
------------------------------------------------------------------------------------
-
-	- google search:  debconf preload
-
-http://blog.delgurth.com/2009/01/19/pre-loading-debconf-values-for-easy-installation/
+-   https://bugs.launchpad.net/ubuntu/+source/ledgersmb/+bug/1473318
+- reported against v15.04 (vivid)
+- TMK; already resolved with LSMB v1.3.46-1, available in what will be v15.10 (wily)
 -----------------------------------------------------------------------------------
 
 - A debian/po debconf Japanese translation has been provided. Currently,
@@ -145,8 +102,8 @@ necessary to make them usable on a Debian installation.
 
 - Instead of a sym link to point to the /etc/ledgersmb config file(s), 
 patch config file to add '/etc/' to the config file setting. (Would
-the apache config need to be updated to allow that?)
+the apache config also need to be updated to allow that?)
 
 
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 31 Aug 2015 11:04 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon,  5 Oct 2015 12:30 -0400
