--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+ledgersmb (1.4.16+ds-0jessie1) jessie; urgency=medium
+
+  * New upstream release.
+  * Add 'Origin: vendor' to the debian/patches/*.patch files.
+  * Update 20_BashPath.patch for new upstream tools/regen_db_docs.sh script.
+  * Changes in debian/rules:
+   - Correct permissions of tools/*.psgi in override_dh_fixperms stanza.
+  	- Correct permissions of lsmb-request.pl in override_dh_fixperms stanza.
+  * Remove references to pos.conf.pl as it is no longer being used.
+  * Remove references to Net::TCLink in debian/README.Debian and debian/control
+    as it is no longer being used.
+
+ -- Robert James Clay <jame@rocasa.us>  Mon, 05 Oct 2015 13:23:32 -0400
+
 ledgersmb (1.4.15+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
