--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.20+ds-0jessie1~1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 03 Dec 2015 08:08:38 -0500
+
 ledgersmb (1.4.19+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
