--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.47~rc1-1~1) UNRELEASED; urgency=medium
+ledgersmb (1.3.47-1~1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Update debhelper version from '8' to '9'.
@@ -10,9 +10,9 @@ ledgersmb (1.3.47~rc1-1~1) UNRELEASED; urgency=medium
     - Refresh debian/patches/10_httpdconf.patch for updated package.
   * Changes to debian/ledgersmb.postinst:
     - Explicitly do 'db_stop' when operations with debconf have completed.
-    - Rewrite how to enable apache 2.4 modules. (Closes: #800036, LP#1513691)
+    - Rewrite how apache 2.4 modules are enabled. (Closes: #800036, LP#1513691)
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 17 Dec 2015 06:31:52 -0500
+ -- Robert James Clay <jame@rocasa.us>  Tue, 22 Dec 2015 12:54:31 -0500
 
 ledgersmb (1.3.46-1~bpo8+1) jessie-backports; urgency=medium
 
