--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.21+ds-0jessie1~1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 22 Dec 2015 14:32:05 -0500
+
 ledgersmb (1.4.20+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
