--- a/UI/Reports/PNL.tex
+++ b/UI/Reports/PNL.tex
@@ -1,13 +1,22 @@
 %<?lsmb FILTER latex ?>
 %
 %<?lsmb
-  max_path_depth = 0;
-  FOREACH row IN report.sorted_row_ids ;
-     IF max_path_depth < report.rheads.ids.$row.path.size ;
-        max_path_depth = report.rheads.ids.$row.path.size ;
-     END;
+  IF hierarchy == 'flat-hierarchy';
+    max_path_depth = 1;
+  ELSE;
+    max_path_depth = 0;
+    FOREACH row IN report.sorted_row_ids ;
+       IF max_path_depth < report.rheads.ids.$row.path.size ;
+          max_path_depth = report.rheads.ids.$row.path.size ;
+       END;
+    END;
   END;
   last_col_no = max_path_depth + 1 + report.cheads.ids.keys.size;
+  IF report.legacy_hierarchy ;
+     hierarchy = 'flat-hierarchy';
+  ELSE ;
+     hierarchy = 'full-hierarchy';
+  END ;
 
  -?>
 
@@ -17,22 +26,41 @@
 \renewcommand\baselinestretch{1.2}\selectfont
 \begin{center}
 \Huge{<?lsmb text('Income Statement') ?>}
+
+\small{
+\texttt{<?lsmb company_name ?>}
+
+
+\texttt{<?lsmb company_address ?>}
+}
 \end{center}
 
 
-\begin{longtable}{@{\extracolsep{10pt}}<?lsmb i = 1; WHILE i <= max_path_depth ; 'l'; i = i + 1; END;
+\begin{longtable}{@{\extracolsep{'0pt}}<?lsmb i = 1; WHILE i <= max_path_depth ; 'l'; i = i + 1; END;
  -?>p{2cm}<?lsmb FOREACH c IN report.cheads.ids.keys; 'r'; END ?>}
 \\
 \multicolumn{<?lsmb max_path_depth+1 ?>}{l}{}%
 <?lsmb
  FOREACH col IN report.cheads.ids.keys;
-     ' & ';
+     ' & \shortstack{';
      report.cheads.ids.$col.props.description ;
+     '} ';
  END;
  ?> \\
 \\
 <?lsmb FOREACH row IN report.sorted_row_ids ;
-   path_depth = report.rheads.ids.$row.path.size;
+   IF report.rheads.ids.$row.props.section_for;
+     row_id = report.rheads.ids.$row.props.section_for;
+     IF report.rheads.ids.$row_id.props.account_category == 'Q';
+       NEXT;
+     END;
+   END;
+
+   IF hierarchy == 'flat-hierarchy';
+     path_depth = 1;
+   ELSE;
+     path_depth = report.rheads.ids.$row.path.size;
+   END;
    path_prefix_len = path_depth - 1;
    path_suffix_len = max_path_depth - path_prefix_len;
 
@@ -42,9 +70,14 @@
      desc = report.rheads.ids.$row.props.account_description;
    END;
 
-  IF report.rheads.ids.$row.props.account_type == 'H';
-    '\cline{' _ path_depth _ '-' _ last_col_no _ '} ';
-    desc = '\emph{' _ desc _ '}';
+   IF report.rheads.ids.$row.props.account_type != 'A';
+    IF report.rheads.ids.$row.props.section_for ;
+       row_id = report.rheads.ids.$row.props.section_for ;
+       desc = '\Large{' _ report.rheads.ids.$row_id.props.account_description _ '}';
+    ELSE;
+      '\cline{' _ path_depth _ '-' _ last_col_no _ '} ';
+    END;
+    desc = '\textbf{\emph{' _ desc _ '}}';
   END ;
 -?>%
 %
@@ -55,24 +88,28 @@
     j = j + 1;
   END;
 -?>
-<?lsmb IF path_prefix_len > 0 -?>
- &
-<?lsmb END -?>
 <?lsmb IF path_suffix_len > 1 -?>
 \multicolumn{<?lsmb path_suffix_len ?>}{l}{<?lsmb desc ?>}%
 <?lsmb ELSE -?>
 <?lsmb desc ?>
 <?lsmb END -?>
 %
-& %
+ & %
 <?lsmb FOREACH col IN report.cheads.ids.keys;
   ' & '; report.cells.$row.$col;
 END; -?>
 %
 \\
 %
-<?lsmb IF report.rheads.ids.$row.props.account_type == 'H'; ?>
+<?lsmb IF report.rheads.ids.$row.props.account_type != 'A'; -?>
+  <?lsmb IF report.rheads.ids.$row.props.section_for; -?>
+\cline{<?lsmb path_depth ?>-<?lsmb last_col_no ?>}
+\noalign{\vskip 2pt}
+\cline{<?lsmb path_depth ?>-<?lsmb last_col_no ?>}
+  <?lsmb ELSE -?>
 \\
+  <?lsmb END -?>
+
 <?lsmb END -?>
 <?lsmb END -?>
 
