Set debian/changelog for v1.4.23-1~1 (UNRELEASED).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.23+ds-0jessie1~1) UNRELEASEDjessie; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Wed, 13 Jan 2016 11:17:44 -0500
+
 ledgersmb (1.4.22+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
