Set debian/changelog for v1.4.24+ds-0jessie1 (jessie).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-ledgersmb (1.4.24+ds-1~1) UNRELEASED; urgency=medium
+ledgersmb (1.4.24+ds-0jessie1) jessie; urgency=medium
 
   * New upstream release.
+  * Correct spelling of 'authorative' as 'authoritative' in the file
+    debian/README.Debian.
   * Update debian/copyright to reflect upstream changes to the following
     files: locale/po/da.po, locale/po/ar_EG.po, and locale/po/et.po.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 05 Feb 2016 23:45:14 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sat, 06 Feb 2016 01:46:21 -0500
 
 ledgersmb (1.4.23+ds-0jessie1) jessie; urgency=medium
 
