Update debian/changelog for ledgersmb v1.3.47-1~6 (UNRELEASED).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ledgersmb (1.3.47-1~5) UNRELEASED; urgency=medium
+ledgersmb (1.3.47-1~6) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Changes to debian/control:
     - Set the Vcs-Browser URL to use 'https' instead of 'http'.
+    - Set Standards-Version to 3.9.7, no package changes required.
     - Change texlive-xetex from 'Suggests' to 'Recommends' to work around issues
       with using liblatex-driver-perl needed for printing.
   * Changes to debian/copyright:
@@ -14,8 +15,11 @@ ledgersmb (1.3.47-1~5) UNRELEASED; urgency=medium
     - Add 'Origin: vendor' to the debian/patches/*.patch files.
     - Remove unneeded line 5 in debian/patches/20_BashPath.patch.
     - Refresh debian/patches/10_httpdconf.patch for updated package.
+    - Set default for the 'contrib_dir' setting in 05_confdir.patch to be for
+      v9.5 instead of v9.1.
   * Correct spelling of 'authorative' as 'authoritative' in the file
     debian/README.Debian.
+  * Default to 'true' in debian/templates to automatically configure package.
   * Changes to debian/ledgersmb.preinst and debian/ledgersmb.postrm:
     - Update the package version being checked for the apache config file rename
       to package version v1.3.18-2.
@@ -23,10 +27,10 @@ ledgersmb (1.3.47-1~5) UNRELEASED; urgency=medium
     - Update the package version being checked for the apache config file rename
       to package version v1.3.18-2.
     - Explicitly do 'db_stop' after operations with debconf have completed.
-    - Rewrite how apache 2.4 modules are enabled. (Closes: #800036, #819481,
-      LP#1513691)
+    - Rewrite how apache 2.4 modules are enabled and how the apache v2.2 related
+      configuration files are handled. (Closes: #800036, #819481, LP#1513691)
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 31 Mar 2016 12:08:10 -0500
+ -- Robert James Clay <jame@rocasa.us>  Thu,  7 Apr 2016 10:28:08 -0500
 
 ledgersmb (1.3.46-1~bpo8+1) jessie-backports; urgency=medium
 
