Imported Upstream version 1.4.28+ds

--- a/Changelog
+++ b/Changelog
@@ -37,16 +37,32 @@ Internationalization
 Changelog for 1.4 Series
 Released 2014-09-15
 
+Changelog for 1.4.28
+* Fix for 1.3 to 1.4 migration of 'recurring' table data (David G, #1447)
+* Support for fixing up data in migrations using drop-downs (Yves L)
+* Fix Upgrade_Tests validation complaint on valid GIFI data (Erik H, #1443)
+* Fix number formatting on locale with comma as decimal separator (Erik H)
+* Fix performance issue in General Joural > Chart of Accounts screen (Erik H)
+* Fix being able to close periods - regression from 1.3 (Erik H)
+
+David G is David Godfrey
+Yves L is Yves Lavoie
+Erik H is Erik Huelsmann
+
+
 Changelog for 1.4.27
 * Added note to batch list that all are locked (Chris T)
 * Allow multiple logins per user, all with own locks (Chris T, #1418)
 * Fixes meaningless subtotals on recon search results (Chris T, #995)
 * SQL Ledger 3.0 migration support (Yves L/Erik H)
+* SQL Ledger 2.8 migration improvements from SL 3.0 support (Erik H)
 * Fix random column ordering in PNL & B/S comparison (Yves L)
+* Complete Norwegian Bokmal translation (Stig B)
 
 Chris T is Chris Travers
 Yves L is Yves Lavoie
 Erik H is Erik Huelsmann
+Stig B is Stig Berg
 
 
 Changelog for 1.4.26
